# viklings

./: .gitignore  README.md  pom.xml  run-macos.sh
agent-notes/: AGENT_README.md  README.md
agent-notes/agent-tools/: README.md  input-injector.sh  movement-validator.sh  screenshot.sh
agent-notes/questions/: README.md  answer-q001.md  q001-example-question.md  question-template.md
agent-notes/tickets/: arch001.md  arch002.md  dev001.md  dev002.md  dev003.md  dev004.md  dev005.md  dev006.md  dev007.md  tool001.md  tool002.md
src/main/java/engine/: EngineComponent.java  GameComponent.java  GameEngine.java  GameItem.java  GameLogic.java  GamePosition.java  GameTimer.java  GameWindow.java  Hud.java  TextItem.java  (+1 more)
src/main/resources/: log4j2.xml
viklings-bgfx/: Cargo.toml  README.md
viklings-bgfx/shaders/: fragment.sc  vertex.sc
viklings-bgfx/src/: main.rs  renderer.rs  window.rs
viklings-wgpu/: Cargo.toml  README.md  collision_demo.ts  collision_test.ts  game.ts  game_test.ts  run.sh  square_game.js  square_game.ts  win_test.ts
viklings-wgpu/src/: lib.rs  main.rs  main_original.rs  shader.wgsl  stats.rs  terminal.rs
viklings-wgpu/src/application/: app.rs  mod.rs  timer.rs
viklings-wgpu/src/ecs/: components.rs  entity_manager.rs  mod.rs  systems.rs
viklings-wgpu/src/graphics/: instance_data.rs  mod.rs  renderer.rs  ui_system.rs  vertex.rs
viklings-wgpu/src/physics/: aabb.rs  collision_system.rs  mod.rs
viklings-wgpu/src/scripting/: mod.rs  operations.rs  runtime.rs
viklings-wgpu/src/timing/: frame_limiter.rs  game_clock.rs  game_timer.rs  mod.rs
(+96 files in other folders)
