[package]
name = "viklings-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Viklings Team"]
description = "wgpu prototype for next-generation Viklings game engine"

[dependencies]
wgpu = "0.19"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
